<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dimen_4dp"
    app:cardElevation="@dimen/dimen_2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8dp">

        <ImageView
            android:id="@+id/iv_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/restaurant_name"
            android:padding="@dimen/dimen_8dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restaurant_name"
            style="@style/MainTextViewStyle"
            android:text="@string/restaurant_name"
            app:layout_constraintLeft_toRightOf="@+id/iv_restaurant"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restaurant_address"
            style="@style/NormalTextViewStyle"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="@string/restaurant_address"
            android:maxLines="2"
            app:layout_constraintLeft_toRightOf="@+id/iv_restaurant"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restaurant_amount"
            style="@style/NormalTextViewStyle"
            android:text="@string/restaurant_amount"
            app:layout_constraintLeft_toRightOf="@+id/iv_restaurant"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_address" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restaurant_timings"
            style="@style/NormalTextViewStyle"
            android:text="@string/restaurant_timings"
            app:layout_constraintLeft_toRightOf="@+id/iv_restaurant"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_amount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restaurant_type"
            style="@style/NormalTextViewStyle"
            android:text="@string/restaurant_type"
            app:layout_constraintLeft_toRightOf="@+id/iv_restaurant"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant_timings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restaurant_rating"
            style="@style/NormalTextViewStyle"
            android:padding="@dimen/dimen_4dp"
            android:layout_marginRight="@dimen/dimen_12dp"
            android:background="@drawable/bg_rating"
            android:gravity="center"
            android:text="@string/restaurant_rating"
            android:textSize="@dimen/dimen_12sp"
            android:layout_marginTop="@dimen/dimen_2dp"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_restaurant_order_now"
            style="@style/NormalTextViewStyle"
            android:text="@string/order_now"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_8dp"
            android:layout_margin="@dimen/dimen_12dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_timings"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>